Update /lecture